[project]
name = "transitpulse"
version = "0.1.0"
description = "Real-time public transport tracking and ETA prediction demo for small cities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.7",
    "uvicorn[standard]==0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
